advanced/asm/istio-manifests/authz-allow-frontend.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: currency-policy
spec:
  selector:
    matchLabels:
      app: currencyservice
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/frontend"]
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/checkoutservice"]
